feat(autenticação): implementar cadastro e login de usuário