@@ -1,23 +1,28 @@
 package com.gerenciadororcamentos.security;
 
 
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
-
-import java.util.Collections;
+import com.gerenciadororcamentos.repository.UsuarioRepository;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import java.util.List;
 
 @Service
 public class UserDetailsServiceImpl implements UserDetailsService {
 
+    @Autowired
+    private UsuarioRepository usuarioRepository;
+
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
-        // Aqui você poderia buscar do banco de dados
-        if (username.equals("admin")) {
-            return new User("admin", "{noop}admin123", Collections.emptyList());
-        }
-        throw new UsernameNotFoundException("Usuário não encontrado");
+        var usuario = usuarioRepository.findByUsername(username)
+                .orElseThrow(() -> new UsernameNotFoundException("Usuário não encontrado"));
+
+        var authorities = List.of(new SimpleGrantedAuthority("ROLE_" + usuario.getRole().name()));
+        return new User(usuario.getUsername(), usuario.getPassword(), authorities);
     }
 }
